--- a/ms-front/src/main/resources/templates/index.html
+++ b/ms-front/src/main/resources/templates/index.html
@@ -1,6 +1,7 @@
-<div xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity6" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="~{_layout}" layout:fragment="content">
+<div xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity6" xmlns:th="http://www.thymeleaf.org"
+     xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="~{_layout}" layout:fragment="content">
 
     <main class="container">
-       <h1>Hello world</h1>
+        <h1>Hello world</h1>
     </main>
 </div>
