--- a/ms-front/src/main/resources/templates/_layout.html
+++ b/ms-front/src/main/resources/templates/_layout.html
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link th:href="@{css/style.css}" rel="stylesheet" crossorigin="anonymous">
         <link th:href="@{css/bootstrap.min.css}" rel="stylesheet" crossorigin="anonymous">
+        <script src="http://localhost:35729/livereload.js"></script>
     </head>
 <body>
 <!--    <header xmlns:th="http://www.thymeleaf.org" th:fragment="header">
