--- a/ms-front/src/main/resources/templates/index.html
+++ b/ms-front/src/main/resources/templates/index.html
@@ -26,6 +26,7 @@
                 <td th:text="${patient.address}"></td>
                 <td th:text="${patient.phoneNumber}"></td>
                 <td>
+                    <a href="#" class="btn btn-success">Voir dossier</a>
                     <a href="#" class="btn btn-secondary">Editer</a>
                 </td>
             </tr>
