--- a/ms-front/src/main/resources/templates/_layout.html
+++ b/ms-front/src/main/resources/templates/_layout.html
@@ -4,19 +4,11 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <link th:href="@{css/style.css}" rel="stylesheet" crossorigin="anonymous">
-        <link th:href="@{css/bootstrap.min.css}" rel="stylesheet" crossorigin="anonymous">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
+        <link th:href="@{/css/style.css}" rel="stylesheet" crossorigin="anonymous">
         <script src="http://localhost:35729/livereload.js"></script>
     </head>
 <body>
-<!--    <header xmlns:th="http://www.thymeleaf.org" th:fragment="header">
-            <nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="padding-left: 10px; padding-right: 10px;">
-                <a class="navbar-brand btn btn-success" href="index">Medilabo</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-            </nav>
-    </header>-->
 
 <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
     <div class="container-fluid">
@@ -48,8 +40,6 @@
     <div layout:fragment="content">change content</div>
 </main>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
 </body>
 </html>
