--- a/ms-front/src/main/resources/templates/edit_patient.html
+++ b/ms-front/src/main/resources/templates/edit_patient.html
@@ -3,6 +3,62 @@
 
     <main class="container">
         <h1>EDIT PATIENT</h1><br>
-
+        <div class="card">
+          <form th:action="@{/patient/{id}/update(id=${patient.id})}" method="post" enctype="multipart/form-data" th:object="${patient}" style="margin: 10px 50px 10px;">
+        
+            <input type="hidden" th:field="*{id}" />
+        
+            <div class="p-3">
+              <div class="form-group row">
+                <label class="col-2 col-form-label" for="lastName">Last Name</label>
+                <div class="col-10">
+                  <input type="text" th:field="*{lastName}" required minlength="2" maxlength="256" class="form-control"
+                    id="lastName" />
+                </div>
+              </div>
+              <br>
+              <div class="form-group row">
+                <label class="col-2 col-form-label" for="firstName">First Name</label>                
+                <div class="col-10">
+                  <input type="text" th:field="*{firstName}" required minlength="2" maxlength="256" class="form-control"
+                    id="firstName" />
+                </div>
+              </div>            
+              <br>
+              <div class="form-group row">
+                <label class="col-2 col-form-label" for="birthDate">Birthdate</label>                
+                <div class="col-10">
+                  <input type="date" step="1" th:field="*{birthDate}" required
+                    class="form-control" id="birthDate" />
+                </div>
+              </div>            
+              <br>
+              <div class="form-group row">
+                <label class="col-2 form-check-label" for="gender">Gender</label>                
+                <div class="col-10">
+                  <input type="text" th:field="*{gender}" required pattern="M|F"/>
+                </div>
+              </div>               
+              <br>
+              <div class="form-group row">
+                <label class="col-2 form-check-label" for="address">Address</label>                
+                <div class="col-10">
+                  <input type="text" th:field="*{address}" required/>
+                </div>
+              </div>            
+              <br>
+              <div class="form-group row">
+                <label class="col-2 form-check-label" for="phoneNumber">Phone Number</label>                
+                <div class="col-10">
+                  <input type="text" th:field="*{phoneNumber}" required/>
+                </div>
+              </div>            
+              <br>
+              <div class="d-flex flex-row-reverse">
+                <input type="submit" value="Save" class="btn btn-primary" />
+              </div>
+            </div>
+          </form>
+        </div>
     </main>
 </div>
