--- a/ms-front/src/main/resources/templates/ajouter_note.html
+++ b/ms-front/src/main/resources/templates/ajouter_note.html
@@ -18,7 +18,7 @@
              </div>      
              <br>
              <div class="d-flex flex-row-reverse">
-               <input type="submit" value="Save" class="btn btn-primary" />
+               <input type="submit" value="Save" class="btn btn-success" />
              </div>
            </div>
          </form>
