--- a/ms-front/src/main/resources/templates/creer_patient.html
+++ b/ms-front/src/main/resources/templates/creer_patient.html
@@ -53,7 +53,7 @@
              </div>            
              <br>
              <div class="d-flex flex-row-reverse">
-               <input type="submit" value="Create" class="btn btn-primary" />
+               <input type="submit" value="Create" class="btn btn-success" />
              </div>
            </div>
          </form>
