--- a/ms-front/src/main/resources/templates/edit_patient.html
+++ b/ms-front/src/main/resources/templates/edit_patient.html
@@ -55,7 +55,7 @@
               </div>            
               <br>
               <div class="d-flex flex-row-reverse">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input type="submit" value="Save" class="btn btn-success" />
               </div>
             </div>
           </form>
