--- a/ms-front/src/main/resources/templates/index.html
+++ b/ms-front/src/main/resources/templates/index.html
@@ -3,7 +3,7 @@
 
     <main class="container">
         <h1>Liste des patients</h1><br>
-        <a href="#" class="btn btn-primary">Nouveau Patient</a>
+        <a th:href="@{/patient/create}" class="btn btn-primary">Nouveau Patient</a>
         <br><br>
         <table class="table table-striped">
             <thead>
