handle logout + some refacto into note-ms

--- a/ms-front/src/main/resources/templates/_layout.html
+++ b/ms-front/src/main/resources/templates/_layout.html
@@ -12,7 +12,7 @@
 
 <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
     <div class="container-fluid">
-        <a class="navbar-brand btn btn-success" href="index">Medilabo</a>
+        <a class="navbar-brand btn btn-success" th:href="@{/}">Medilabo</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -29,8 +29,7 @@
                 </li>
             </ul>
             <form class="d-flex" role="search">
-                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success" type="submit">Search</button>
+                <a th:href="@{/logout}" class="btn btn-outline-success" type="submit">Logout</a>
             </form>
         </div>
     </div>
