--- a/ms-front/src/main/resources/templates/_layout.html
+++ b/ms-front/src/main/resources/templates/_layout.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
         <link th:href="@{/css/style.css}" rel="stylesheet" crossorigin="anonymous">
-        <script src="http://localhost:35729/livereload.js"></script>
+<!--        <script src="http://localhost:35729/livereload.js"></script>-->
     </head>
 <body>
 
@@ -19,13 +19,7 @@
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <ul class="navbar-nav me-auto mb-2 mb-md-0">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+                    <a class="nav-link active" aria-current="page" th:href="@{/}">Accueil</a>
                 </li>
             </ul>
             <form class="d-flex" role="search">
